<resources>
    <string name="app_name">WLDemo</string>
    <string name="login_name">输入用户名</string>
    <string name="login_password">输入密码</string>
    <string name="register_email">输入邮箱</string>
    <string name="login_register">用户注册</string>
    <string name="login_forget">找回密码?</string>
    <string name="login">登 录</string>
    <string name="register">注 册</string>
    <string name="share">分享到平台</string>
    <string name="tab_hone">首页</string>
    <string name="tab_flow">治疗流程</string>
    <string name="tab_business">业务处理</string>
    <string name="tab_mine">我的</string>
    <string name="loading">加载中</string>

    <string name="save_picture_failed"> 保存失败 </string>
    <string name="save_picture_success"> 图片成功保存 </string>
    <string name="competence_error">没有权限无法保存图片</string>

    <string name="clear_dialog_message">只是暂时在界面删除,刷新还是会有的,确认删除吗？</string>
    <string name="dialog_ok">确认</string>
    <string name="imageview_message">确认保存图片吗?</string>

    <string name="item_proscenium">前台服务</string>
    <string name="item_counselor">咨询师订单</string>
    <string name="item_medical">医疗订单</string>
    <string name="item_revisit">跟踪回访</string>

    <string name="item_hufu">护肤保养</string>
    <string name="see_detail">查看详情</string>

    <string name="old_password">请输入旧密码</string>
    <string name="new_password">请输入新密码</string>
    <string name="find_password">请输入邮箱</string>
    <string name="find_code">请输入验证码</string>
    <string name="et_phone">请输入手机号</string>
    <string name="btn_password">修改密码</string>
    <string name="btn_find">下一步</string>
    <string name="btn_change">确认密码</string>
    <string name="btn_phone">确认修改</string>
    <string name="btn_save">确认保存</string>
    <string name="check_login">点击登录</string>
</resources>
