<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <ImageView
        android:layout_margin="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/title"/>
    <LinearLayout
        android:layout_margin="35dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--<LinearLayout-->
        <!--android:background="@drawable/login_edittext"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<ImageView-->
        <!--android:padding="@dimen/login_text"-->
        <!--android:src="@mipmap/login_head"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->
        <!--<EditText-->
        <!--android:padding="@dimen/login_text"-->
        <!--android:hint="@string/login_name"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->
        <!--</LinearLayout>-->
        <EditText
            android:id="@+id/register_name"
            android:padding="@dimen/login_text"
            android:drawablePadding="@dimen/login_text"
            android:drawableLeft="@mipmap/login_head"
            android:background="@drawable/login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_name"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <EditText
            android:id="@+id/register_password"
            android:padding="@dimen/login_text"
            android:drawablePadding="@dimen/login_text"
            android:drawableLeft="@mipmap/login_password"
            android:background="@drawable/login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"/>
        <!--<LinearLayout-->
        <!--android:background="@drawable/login_edittext"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<ImageView-->
        <!--android:padding="@dimen/login_text"-->
        <!--android:src="@mipmap/login_password"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->
        <!--<EditText-->
        <!--android:padding="@dimen/login_text"-->
        <!--android:hint="@string/login_password"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content" />-->
        <!--</LinearLayout>-->
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
        <EditText
            android:id="@+id/register_email"
            android:padding="@dimen/login_text"
            android:drawablePadding="@dimen/login_text"
            android:drawableLeft="@mipmap/register_email"
            android:background="@drawable/login_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:onClick="click"
            android:background="@drawable/btn_login"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register" />


    </LinearLayout>



</LinearLayout>